--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
      box-sizing: border-box;
      background: Black;
      font-family: sans-serif;  
-     /*outline: 1px solid red;*/
+     outline: 1px solid red;
  }
 
 a {
